--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   post_build:
     commands:
       - echo $PWD
-      - tar cf /tmp/node_modules.tar ./client/node_modules/
+      - tar cf /tmp/node_modules.tar ./node_modules/
 artifacts:
   files:
     - '**/*'
