--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - if [ -e /tmp/node_modules.tar ]; then tar xf /tmp/node_modules.tar; fi
+      #- if [ -e /tmp/node_modules.tar ]; then tar xf /tmp/node_modules.tar; fi
       - yarn install
   build:
     commands:
@@ -11,12 +11,12 @@ phases:
       - yarn run build
   post_build:
     commands:
-      - echo $PWD
-      - tar cf /tmp/node_modules.tar node_modules
+      #- echo $PWD
+      #- tar cf /tmp/node_modules.tar node_modules
 artifacts:
   files:
     - '**/*'
   base-directory: build
 cache:
   paths:
-    - /tmp/node_modules.tar
+    #- /tmp/node_modules.tar
